# nova-scheduler-filters

./: .gitignore  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  README.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
nova_scheduler_filters/: failure_domain_filter.py
nova_scheduler_filters/tests/unit/: test_failure_domain_filter.py
playbooks/release/: post.yaml
