[metadata]
name = nova-scheduler-filters
summary = Additional filters for the OpenStack Nova scheduler
description_file =
    README.rst
author = VEXXHOST, Inc.
author_email = support@vexxhost.com
url = https://vexxhost.github.io/nova-scheduler-filters/
project_urls =
    Bug Tracker = https://github.com/vexxhost/nova-scheduler-filters/issues
    Documentation = https://vexxhost.github.io/nova-scheduler-filters/
    Source Code = https://github.com/vexxhost/nova-scheduler-filters
python_requires = >=3.8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    nova_scheduler_filters
